# DocSage

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yml  ollama_rag_panel.py  ollama_rag_streamlit.py  pyproject.toml  simple_ollama_rag.py
data/: movie_wiki.txt
notebooks/: 00_simple_query_with_contex.ipynb  00_simple_rag.ipynb  01_embeddings.ipynb  02_save_vectordb.ipynb  03_extend_db.ipynb  04_build_mantid_db.ipynb  05_build_imars3d_db.ipynb  06_use_non_standard_embeddingfunc.ipynb  07_check_source_used.ipynb  08_build_bm3dornl_db.ipynb
presentation/: ollama_langchain_rag.md
presentation/neutron_raglora/: neutronGPT.html  neutronGPT.md
presentation/tech_talk_FY24/: ollama_langchain_rag.md
src/docsage/: __init__.py  model.py
vectorDB/bm3dornl/: chroma.sqlite3
vectorDB/imars3d/: chroma.sqlite3
vectorDB/mantid/: chroma.sqlite3
vectorDB/mantid/f09f4b3d-d4c2-4e0b-b7f5-fd303fa1e489/: index_metadata.pickle
